samples/errors/float_int_mixing.opal
;; Error: float operator `+.` requires Float, but 1 is Int
(let main {} (+. 1 2.5))
